# phonebook

./: CMakeLists.txt  README.md  database.db  main.cpp
src/: CMakeLists.txt
src/core/: Application.cpp  CMakeLists.txt
src/core/include/: Application.h
src/database/: CMakeLists.txt  SqliteDatabase.cpp
src/database/include/: DatabaseInterface.h  SqliteDatabase.h
src/gui/: Application.cpp  Application.h  CMakeLists.txt  ChangePasswordDialog.cpp  ChangePasswordDialog.h  ChangePasswordDialog.ui  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow.ui.autosave  SearchDialog.cpp  SearchDialog.h  SearchDialog.ui  SearchDialogcpp.cpp  UserAccountDialog.cpp  UserAccountDialog.h  UserAccountDialog.ui  UserMenu.cpp  UserMenu.h  gui.pro  main.cpp  qrc_resources.cpp  resources.qrc  ui_ChangePasswordDialog.h  ui_LoginDialog.h  ui_MainWindow.h  ui_SearchDialog.h  ui_UserAccountDialog.h
src/gui/forms/: ChangePasswordForm.cpp  ChangePasswordForm.h  ChangePasswordForm.ui  NewRecordForm.cpp  NewRecordForm.h  NewRecordForm.ui  NewUserForm.cpp  NewUserForm.h  NewUserForm.ui  PhonebookForm.cpp  PhonebookForm.h  PhonebookForm.ui  RequestsForm.cpp  RequestsForm.h  RequestsForm.ui  UsersForm.cpp  UsersForm.h  UsersForm.ui  ui_ChangePasswordForm.h  ui_NewRecordForm.h  ui_NewUserForm.h  ui_PhonebookForm.h  ui_RequestsForm.h  ui_UsersForm.h
src/phonebook/: CMakeLists.txt  PhoneBookAPI.cpp  PhoneBookDatabaseManager.cpp  PhoneBookRecord.cpp  Record.cpp  UserDatabaseManager.cpp  UserManager.cpp  UserRecord.cpp
src/phonebook/include/: PhoneBookAPI.h  PhoneBookDatabaseManager.h  PhoneBookRecord.h  Record.h  UserDatabaseManager.h  UserManager.h  UserRecord.h
tests/: BasicTests.cpp  CMakeLists.txt  PhoneBookAPITests.cpp  PhoneBookRecordTests.cpp  SQLiteDatabaseTests.cpp  UserManagerTests.cpp  UsersTests.cpp
